# hyprpier

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  TODO.md
.github/workflows/: aur-publish.yml  release.yml
docs/: aur.md
src/: apply.rs  cli.rs  config.rs  daemon.rs  dock.rs  hyprland.rs  main.rs  metadata.rs  profile.rs  setup.rs  thunderbolt.rs  thunderbolt_cli.rs
src/tui/: app.rs  mod.rs  monitor_arrange.rs  profile_editor.rs  profile_list.rs  styles.rs  thunderbolt.rs
