[package]
name = "hyprpier"
version = "0.1.0"
edition = "2021"
description = "Hyprland monitor profile manager with Thunderbolt dock detection"
license = "MIT"
repository = "https://github.com/jakeb-grant/hyprpier"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
dirs = "5"
notify-rust = "4"

[profile.release]
lto = true
strip = true
codegen-units = 1
